form overflow fixed

--- a/css/register.css
+++ b/css/register.css
@@ -34,6 +34,7 @@ label {
 
     .input-group input {
         width: 52%;
+        margin-right: 16px;
     }
 
     .checkbox-group {
@@ -46,13 +47,14 @@ label {
         position: sticky;
         left: 97%;
         height: 40%;
+        margin-right: 16px;
     }
 
 }
 
 @media (max-width:440px) {
     .input-group input {
-        width: 98.5%;
+        width: 90%;
         float: none;
     }
 }
